--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
 		"plugin:import/recommended",
 		"plugin:import/typescript",
 		"plugin:flowtype/recommended",
-		"plugin:jsx-a11y/recommended"
+		"plugin:jsx-a11y/recommended",
+		"prettier"
 	],
 	"plugins": ["@typescript-eslint", "solid", "import", "flowtype", "jsx-a11y"],
 	"parser": "@typescript-eslint/parser",
